--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+
   db:
     image: postgres:15
     environment:
@@ -19,8 +20,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "8000:8000"
+    # ports:
+    #   - "8000:8000"
     depends_on:
       - db
     environment:
@@ -30,7 +31,9 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
-    restart: on-failure
+    restart: always
+    volumes:
+      - static_volume:/middleware-dt/static
 
   neo4j:
     image: neo4j:5.8
@@ -45,5 +48,17 @@ services:
       timeout: 5s
       retries: 5
 
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    depends_on:
+      - middleware
+    volumes:
+    - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro  # Corrija o caminho para o arquivo
+    - static_volume:/etc/nginx/staticfiles/static
+
 volumes:
   db_data:
+  static_volume:
+
