--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
     depends_on:
       - middleware
     volumes:
-    - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro  # Corrija o caminho para o arquivo
+    - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     - static_volume:/etc/nginx/staticfiles/static
 
 volumes:
