--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,15 @@ services:
     - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     - static_volume:/etc/nginx/staticfiles/static
 
+  parser:
+    image: andregustavoo/parserwebapi:latest
+    ports:
+      - "8080:8080"
+      - "8081:8081"
+    restart: always
+    networks:
+      - default
+
 volumes:
   db_data:
   static_volume:
-
