--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,17 @@
+# .github/workflows/ci.yml
+
 name: CI
 
 on:
   pull_request:
     branches:
       - main
+  push:
+    branches:
+      - main
 
 jobs:
-  test:
-    name: Test
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,8 +27,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements/base.txt
+          
+      # TODO quando tiver testes no projeto
+      # - name: Run tests
+      #  run: |
+      #    pytest
 
-# TODO quando tiver testes no projeto
-#      - name: Run Tests  
-#        run: |
-#          pytest
+      - name: Build Docker image
+        run: |
+          docker build -t middleware-dt:${{ github.sha }} .
