--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,26 +6,27 @@ on:
       - main
 
 jobs:
-  build-and-push:
-    name: Build and Push Docker Image
-    needs: lint-and-test
+  deploy:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_PASSWORD }} # Token de acesso do Docker Hub
 
       - name: Build and Push Docker Image
         run: |
-          IMAGE_TAG=${{ secrets.DOCKER_USERNAME }}/middleware-dt:${{ github.sha }}
-          docker build -t $IMAGE_TAG .
-          docker tag $IMAGE_TAG ${{ secrets.DOCKER_USERNAME }}/middleware-dt:latest
-          docker push $IMAGE_TAG
-          docker push ${{ secrets.DOCKER_USERNAME }}/middleware-dt:latest
+          IMAGE_NAME=${{ secrets.DOCKER_USERNAME }}/middleware-dt
+          IMAGE_TAG=${GITHUB_SHA}
+          docker build -t $IMAGE_NAME:$IMAGE_TAG .
+          docker tag $IMAGE_NAME:$IMAGE_TAG $IMAGE_NAME:latest
+          docker push $IMAGE_NAME:$IMAGE_TAG
+          docker push $IMAGE_NAME:latest
