--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,21 @@ jobs:
       #  run: |
       #    pytest
 
-      - name: Build Docker image
+      # - name: Build Docker image
+      #  run: |
+      #    docker build -t middleware-dt:${{ github.sha }} .
+      
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }} # Token de acesso do Docker Hub
+
+      - name: Build and Push Docker Image
         run: |
-          docker build -t middleware-dt:${{ github.sha }} .
+          IMAGE_NAME=${{ secrets.DOCKER_USERNAME }}/middleware-dt
+          IMAGE_TAG=${GITHUB_SHA}
+          docker build -t $IMAGE_NAME:$IMAGE_TAG .
+          docker tag $IMAGE_NAME:$IMAGE_TAG $IMAGE_NAME:latest
+          docker push $IMAGE_NAME:$IMAGE_TAG
+          docker push $IMAGE_NAME:latest
