--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,19 @@ services:
     restart: always
     networks:
       - default
+  influxdb:
+    image: influxdb:2.7
+    ports:
+      - "8086:8086"
+    environment:
+      - DOCKER_INFLUXDB_INIT_MODE=setup
+      - DOCKER_INFLUXDB_INIT_USERNAME=admin
+      - DOCKER_INFLUXDB_INIT_PASSWORD=admin123
+      - DOCKER_INFLUXDB_INIT_ORG=middts
+      - DOCKER_INFLUXDB_INIT_BUCKET=iot_data
+      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=xxx
+    volumes:
+      - influxdb_data:/var/lib/influxdb2
 
 volumes:
   db_data:
