--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,17 @@
+DB_HOST_PORT=5432
 # PostgreSQL
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=middts
-DATABASE_URL=postgresql://postgres:postgres@middleware-dt-db-1:5432/middts
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 
 # Neo4j
-NEO4J_AUTH=neo4j/password
-NEO4J_URL=localhost:7687
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=password
+NEO4J_URL=neo4j:7687
+NEO4J_AUTH=neo4j/password
 
 # InfluxDB
 INFLUXDB_HOST=influxdb
