--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:${DB_HOST_PORT:-5432}"
     volumes:
       - db_data:/var/lib/postgresql/data
     healthcheck:
@@ -39,9 +39,9 @@ services:
       - "7474:7474"
       - "7687:7687"
     environment:
-      NEO4J_AUTH: ${NEO4J_AUTH}
+      NEO4J_AUTH: ${NEO4J_AUTH}  # <- Use variável única, sem redefinir USER/PASSWORD
     healthcheck:
-      test: ["CMD-SHELL", "cypher-shell -u neo4j -p $(echo ${NEO4J_AUTH} | cut -d/ -f1) -p $(echo ${NEO4J_AUTH} | cut -d/ -f2) -e 'RETURN 1'"]
+      test: ["CMD-SHELL", "cypher-shell -u neo4j -p ${NEO4J_PASSWORD} -e 'RETURN 1'"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -59,11 +59,12 @@ services:
   parser:
     image: andregustavoo/parserwebapi:latest
     ports:
-      - "8080:8080"
-      - "8081:8081"
+      - "8082:8080"  # Porta 8082 no host, redireciona para 8080 no container
+      - "8083:8081"  # Se o container também usar 8081
+    environment:
+      - ASPNETCORE_URLS=http://0.0.0.0:8080
     restart: always
-    networks:
-      - default
+    
   influxdb:
     image: influxdb:2.7
     ports:
@@ -72,12 +73,13 @@ services:
       - DOCKER_INFLUXDB_INIT_MODE=setup
       - DOCKER_INFLUXDB_INIT_USERNAME=admin
       - DOCKER_INFLUXDB_INIT_PASSWORD=admin123
-      - DOCKER_INFLUXDB_INIT_ORG=middts
-      - DOCKER_INFLUXDB_INIT_BUCKET=iot_data
-      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=xxx
+      - DOCKER_INFLUXDB_INIT_ORG=${INFLUXDB_ORGANIZATION}
+      - DOCKER_INFLUXDB_INIT_BUCKET=${INFLUXDB_BUCKET}
+      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=${INFLUXDB_TOKEN}
     volumes:
       - influxdb_data:/var/lib/influxdb2
 
 volumes:
   db_data:
   static_volume:
+  influxdb_data:
