--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,9 @@ NEO4J_URL=neo4j:7687
 NEO4J_AUTH=neo4j/password
 
 # InfluxDB
+ Use the scenario admin token
+INFLUXDB_TOKEN=admin_token_middts
 INFLUXDB_HOST=influxdb
 INFLUXDB_PORT=8086
 INFLUXDB_BUCKET=iot_data
 INFLUXDB_ORGANIZATION=middts
-INFLUXDB_TOKEN=xxx
